# point_cloud_segmentation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/point_cloud_segmentation/: base_segmentation.h  eucledian_cluster_extraction.h  plane_segmentation.h  region_growing_segmentation.h  super_clustering_segmentation.h
launch/: segmentation.launch
msg/: SegmentedPointCloud.msg
rviz/: point_cloud_segmentation_config.rviz
src/: base_segmentation.cpp  eucledian_distance_segmentation.cpp  main.cpp  plane_segmentation.cpp  region_growing_segmentation.cpp  super_clustering_segmentation.cpp
srv/: BaseSegmentationParams.srv  ChangeSegmentationMethod.srv  EucledianClusterParams.srv  PlaneSegmentationParams.srv  RegionGrowingSegParams.srv  SegmentScene.srv  SuperClusteringSegParams.srv
