<?xml version="1.0"?>
<package format="2">
	<name>point_cloud_segmentation</name>
	<version>0.0.0</version>
	<description>The point_cloud_segmentation package</description>
	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="jens.lundell@aalto.fi">Jens Lundell</maintainer>
	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>tf2</depend>
	<build_depend>pcl</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>pcl_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>supervoxel_clustering</build_depend>
	<build_export_depend>pcl</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>pcl_msgs</build_export_depend>
	<build_export_depend>message_runtime</build_export_depend>
	<build_export_depend>supervoxel_clustering</build_export_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>pcl</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>pcl_msgs</exec_depend>
	<exec_depend>supervoxel_clustering</exec_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
